# btucker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: def.hpp  read_data.hpp  sptensor.hpp
src/: def.cpp  read_data.cpp  sptensor.cpp
